# SecondGame

./: CMakeLists.txt  README.md
Components/: Gravity.hpp  RigidBody.hpp  Thrust.hpp  Transform.hpp
ECS/: CompArr.h  CompMang.h  Coordinator.h  EntityManager.h  System.h
Shaders/: default.frag  default.vert  instance.frag  instancing.vert  trial.frag  trial.vert
Systems/: PhysicsSystem.cpp  PhysicsSystem.hpp  RenderSystem.cpp  RenderSystem.hpp
src/: 3d.cpp  FirstGame.vcxproj.filters  InputHandler.cpp  InputHandler.h  Model.cpp  Model.h  PlayerStates.h  Source.cpp  VAO.cpp  VAO.h  VBO.h  actions.h  application.cpp  application.h  cmd.h  filesystem.cpp  filesystem.h  mesh.h  pch.h  player.cpp  save.cpp  shaderClass.cpp  shaderClass.h  tex.cpp  tex.h
src/add-ons/: imgui_widgets.h  str_utils.h
src/elems/: camera.h  element.cpp  element.h  face.cpp  face.h  input.h  light.h  mesh.cpp  mesh.h  player.h  test.h  vertex_holder.h
src/mesh_import/: import_base.h  import_obj.cpp
src/render/: opengl_buffer_manager.cpp  opengl_buffer_manager.h  opengl_context.cpp  opengl_context.h  render_base.h  ui_context.cpp  ui_context.h
src/shader/: shader_util.cpp  shader_util.h
src/ui/: menu.cpp  menu.h  property_panel.cpp  property_panel.h  scene_view.cpp  scene_view.h
src/window/: jgl_window.cpp  jgl_window.h  window.h
